# R6-Reversing

./: README.md  main.cpp
Overlay/: CMakeLists.txt
Overlay/lib/glfw3/src/: win32_window.c
Overlay/res/shaders/: headbox.fsh  headbox.vsh  tracers.fsh  tracers.vsh
Overlay/src/: main.cpp
Overlay/src/core/: LxCamera.cpp  LxCamera.hpp  LxVao.cpp  LxVao.hpp  LxWindow.cpp
Overlay/src/core/shader/: LxShader.hpp
Overlay/src/lxcrystal/: Globals.cpp  Globals.hpp  Types.hpp
Overlay/src/lxcrystal/renderer/: HeadBoxRenderer.cpp  HeadBoxRenderer.hpp  TracersRenderer.cpp  TracersRenderer.hpp
Overlay/src/lxcrystal/shader/: ShaderBase.cpp  ShaderBase.hpp
Overlay/src/util/: lxdbg.cpp  lxdbg.hpp
